# aladdinsdk

./: .coveragerc  .gitignore  APIOnboardingCodegen.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  compute apps inventory.yaml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: publish.yml  quality-check.yml
aladdinsdk/: __init__.py
aladdinsdk/adc/: __init__.py  client.py
aladdinsdk/api/: __init__.py  client.py  registry.py
aladdinsdk/config/: __init__.py  asdkconf.py  internal_settings.py  user_settings.py
aladdinsdk/storage/: s3.py
devutils/: _util_api_codegen.py  asdk_agraph_api_codegen.py  asdk_agraph_plugin_builder.py
docs/: API_ONBOARDING.md
resources/api_specs/: accounting_configuration_attribute_portfolio_records_v1_portfolio_configuration_api.swagger.json  accounting_transactions_abor_lot_v1_abor_lot_api.swagger.json  accounting_workflow_valuations_v1_valuations_api.swagger.json  adc_access_v1_adc_access_swagger.json  adc_dataset_v1_adc_dataset_swagger.json  adc_quality_rule_v1_adc_quality_rule_swagger.json  analytics_oversight_governance_v1_evaluator_analytics_api.swagger.json  analytics_oversight_governance_v1_risk_config_api.swagger.json  analytics_oversight_governance_v1_risk_custom_evaluation_metric_api.swagger.json  analytics_oversight_governance_v1_risk_exception_api.swagger.json  cids_v1_cids_writer_swagger.json  (+49 more)
test/: test_adc.py  test_api.py  test_common_authentication.py  test_common_authentication_adc.py  test_common_authentication_oauth_client.py  test_common_authentication_okta_sidecar_client.py  test_common_batch.py  test_common_blkutils.py  test_common_datatransformation.py  test_common_datatransformation_options.py  test_common_error_handling.py  test_common_error_notifications_email.py  test_common_exports.py  test_common_metrics.py  test_common_notifications_email.py  test_common_notifications_studio.py  test_common_retry.py  test_common_secrets.py  test_config.py  test_config_oauth_config_util.py  test_storage_s3.py  test_user_settings_file_util.py
(+3787 files in other folders)
