[build-system]
requires = ["setuptools", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true
dev_template = "{tag}"
dirty_template = "{tag}"

[project]
name = "aladdinsdk"
authors = [
  { name="Vedant Naik", email="naik.vedant@gmail.com" },
]
description = "AladdinSDK"
readme = "README.md"
requires-python = ">= 3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "version"]

[project.scripts]
aladdinsdk-cli = "aladdinsdk.config.utils.user_settings_file_util:create_user_config_file_template"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

# [project.urls]
# Homepage = "https://github.com/pypa/aladdinsdk"
# Issues = "https://github.com/pypa/aladdinsdk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["aladdinsdk*"]  # ["*"] by default

[tool.setuptools.package-data]
aladdinsdk = ["**/*.json", "api/codegen/codegen_allow_list.yaml"]
